--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-
-theme: jekyll-theme-minimal
+remote_theme:  themefisher/promodise
+#theme: jekyll-theme-minimal
 title: [The How trial]
+description: [A test]
