--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme:  themefisher/promodise
-#theme: jekyll-theme-minimal
+#remote_theme:  themefisher/promodise
+theme: jekyll-theme-minimal
 title: [The How trial]
 description: [A test]
